--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,6 @@
     <string name="complete">10</string>
     <string name="Fragment1">This is ActionBarSherlock Fragment 1</string>
     <string name="Fragment2">This is ActionBarSherlock Fragment 2</string>
-    <string name="Fragment3">This is ActionBarSherlock Fragment 3</string>
+    <string name="Fragment3">FAVORITE MOVIE</string>
 
 </resources>
